# coolsql

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
coolsql/: __init__.py  expressions.py  field.py
script/: check.py  lint.py  upload.py
tests/: test_expressions.py  test_field.py  test_version.py
