[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = "Makes it easier to write raw SQL in Python."
license = "Apache-2.0"
name = "coolsql"
readme = "README.md"
version = "0.1.0"

homepage = "https://github.com/abersheeran/coolsql"
repository = "https://github.com/abersheeran/coolsql"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "coolsql"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

flake8 = "*"

pytest = "*"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
